Expanded span of grid row for location on fixture cards to fix display on mobile devices

--- a/style.css
+++ b/style.css
@@ -421,7 +421,7 @@ nav ul li {
     grid-area: 6 / 1 / 7 / 4;
 }
 .location {
-    grid-area: 7 / 2 / 8 / 3;
+    grid-area: 7 / 1 / 8 / 4;
 }
 
 .location p{
